--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     // Actualiza el minimapa con Google Maps Static API
                     const zoom = 15;
-                    const apiKey = 'AIzaSyBc2QBLTJDpesVos8uVFA0wt84OAMTpagI'; // ¡PON AQUÍ TU API KEY!
+                    const apiKey = '[apikey]'; // ¡PON AQUÍ TU API KEY!
                     const url = `https://maps.googleapis.com/maps/api/staticmap?center=${lat},${lon}&zoom=${zoom}&size=200x200&markers=color:red|${lat},${lon}&key=${apiKey}`;
                     minimap.src = url;
 
