--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Minimapa estilo GTA con Token Manual</title>
+  <title>Minimapa GTA + Cámara Seleccionable</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body { margin: 0; background: #000; color: #fff; font-family: Arial, sans-serif; overflow: hidden; }
-    video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
+    video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: 0; }
     #minimap {
       position: absolute;
       bottom: 10px;
@@ -15,6 +16,7 @@
       border: 3px solid #0f0;
       border-radius: 10px;
       box-shadow: 0 0 15px #0f0;
+      z-index: 1;
     }
     #location-info {
       position: absolute;
@@ -25,38 +27,81 @@
       border-radius: 8px;
       font-size: 14px;
       max-width: 300px;
+      z-index: 1;
+    }
+    #camera-select {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 1;
     }
   </style>
 </head>
 <body>
 
 <video id="video" autoplay playsinline muted></video>
-<img id="minimap" src="" alt="Minimapa">
+<head>
+  <meta charset="UTF-8">
+  <title>Minimapa GTA + Cámara Seleccionable</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <div id="location-info">Cargando ubicación...</div>
+<select id="camera-select"></select>
 
 <script>
   const video = document.getElementById('video');
   const minimap = document.getElementById('minimap');
   const locationInfo = document.getElementById('location-info');
+  const cameraSelect = document.getElementById('camera-select');
 
-  // Pedir token al usuario
+  let currentStream = null;
   const apiKey = prompt('Ingresa tu API Key de Google Maps:');
   if (!apiKey) {
     alert('No se ingresó un token. Cerrando la aplicación.');
     throw new Error('Token requerido');
   }
 
-  // Iniciar la cámara
-  async function startCamera() {
+  async function startCamera(deviceId = null) {
+    if (currentStream) {
+      currentStream.getTracks().forEach(track => track.stop());
+    }
+
+    const constraints = {
+      video: deviceId ? { deviceId: { exact: deviceId } } : true,
+      audio: false
+    };
+
     try {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
+      const stream = await navigator.mediaDevices.getUserMedia(constraints);
+      currentStream = stream;
       video.srcObject = stream;
     } catch (e) {
       alert('Error al acceder a la cámara: ' + e.message);
     }
   }
 
-  // Geolocalización y minimapa
+  async function populateCameraOptions() {
+    const devices = await navigator.mediaDevices.enumerateDevices();
+    const videoDevices = devices.filter(d => d.kind === 'videoinput');
+
+    cameraSelect.innerHTML = '';
+    videoDevices.forEach((device, index) => {
+      const option = document.createElement('option');
+      option.value = device.deviceId;
+      option.text = device.label || `Cámara ${index + 1}`;
+      cameraSelect.appendChild(option);
+    });
+
+    if (videoDevices.length > 0) {
+      startCamera(videoDevices[0].deviceId);
+    }
+  }
+
+  cameraSelect.addEventListener('change', () => {
+    const deviceId = cameraSelect.value;
+    startCamera(deviceId);
+  });
+
   function startGeolocation() {
     if ('geolocation' in navigator) {
       navigator.geolocation.watchPosition(pos => {
@@ -90,7 +135,8 @@
     }
   }
 
-  startCamera();
+  // Iniciar todo
+  populateCameraOptions();
   startGeolocation();
 </script>
 
