--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 <body>
 
 <video id="video" autoplay playsinline muted></video>
-<head>
-  <meta charset="UTF-8">
-  <title>Minimapa GTA + Cámara Seleccionable</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+<div id="minimap-wrapper">
+  <img id="minimap" src="" alt="Minimapa GTA">
+  <img id="minimap-frame" src="images/radar-gta-style.png" alt="Marco GTA">
+</div>
 <div id="location-info">Cargando ubicación...</div>
 <select id="camera-select"></select>
 
