--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Minimapa GTA + Cámara Seleccionable</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body { margin: 0; background: #000; color: #fff; font-family: Arial, sans-serif; overflow: hidden; }
-    video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: 0; }
+    body {
+      margin: 0;
+      background: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+
+    video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+    }
+
     #minimap {
       position: absolute;
       bottom: 10px;
@@ -18,17 +35,19 @@
       box-shadow: 0 0 15px #0f0;
       z-index: 1;
     }
+
     #location-info {
       position: absolute;
       bottom: 220px;
       right: 10px;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       padding: 10px;
       border-radius: 8px;
       font-size: 14px;
       max-width: 300px;
       z-index: 1;
     }
+
     #camera-select {
       position: absolute;
       top: 10px;
@@ -37,107 +56,109 @@
     }
   </style>
 </head>
+
 <body>
 
-<video id="video" autoplay playsinline muted></video>
-<div id="minimap-wrapper">
-  <img id="minimap" src="" alt="Minimapa GTA">
-  <img id="minimap-frame" src="images/radar-gta-style.png" alt="Marco GTA">
-</div>
-<div id="location-info">Cargando ubicación...</div>
-<select id="camera-select"></select>
+  <video id="video" autoplay playsinline muted></video>
+  <div id="minimap-wrapper">
+    <img id="minimap" src="" alt="Minimapa GTA">
+    <img id="minimap-frame" src="images/radar-gta-style.png" alt="Marco GTA">
+  </div>
+  <div id="location-info">Cargando ubicación...</div>
+  <select id="camera-select"></select>
 
-<script>
-  const video = document.getElementById('video');
-  const minimap = document.getElementById('minimap');
-  const locationInfo = document.getElementById('location-info');
-  const cameraSelect = document.getElementById('camera-select');
+  <script>
+    const video = document.getElementById('video');
+    const minimap = document.getElementById('minimap');
+    const locationInfo = document.getElementById('location-info');
+    const cameraSelect = document.getElementById('camera-select');
 
-  let currentStream = null;
-  const apiKey = prompt('Ingresa tu API Key de Google Maps:');
-  if (!apiKey) {
-    alert('No se ingresó un token. Cerrando la aplicación.');
-    throw new Error('Token requerido');
-  }
-
-  async function startCamera(deviceId = null) {
-    if (currentStream) {
-      currentStream.getTracks().forEach(track => track.stop());
+    let currentStream = null;
+    const apiKey = prompt('Ingresa tu API Key de Google Maps:');
+    if (!apiKey) {
+      alert('No se ingresó un token. Cerrando la aplicación.');
+      throw new Error('Token requerido');
     }
 
-    const constraints = {
-      video: deviceId ? { deviceId: { exact: deviceId } } : true,
-      audio: false
-    };
+    async function startCamera(deviceId = null) {
+      if (currentStream) {
+        currentStream.getTracks().forEach(track => track.stop());
+      }
 
-    try {
-      const stream = await navigator.mediaDevices.getUserMedia(constraints);
-      currentStream = stream;
-      video.srcObject = stream;
-    } catch (e) {
-      alert('Error al acceder a la cámara: ' + e.message);
+      const constraints = {
+        video: deviceId ? { deviceId: { exact: deviceId } } : true,
+        audio: false
+      };
+
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia(constraints);
+        currentStream = stream;
+        video.srcObject = stream;
+      } catch (e) {
+        alert('Error al acceder a la cámara: ' + e.message);
+      }
     }
-  }
 
-  async function populateCameraOptions() {
-    const devices = await navigator.mediaDevices.enumerateDevices();
-    const videoDevices = devices.filter(d => d.kind === 'videoinput');
+    async function populateCameraOptions() {
+      const devices = await navigator.mediaDevices.enumerateDevices();
+      const videoDevices = devices.filter(d => d.kind === 'videoinput');
 
-    cameraSelect.innerHTML = '';
-    videoDevices.forEach((device, index) => {
-      const option = document.createElement('option');
-      option.value = device.deviceId;
-      option.text = device.label || `Cámara ${index + 1}`;
-      cameraSelect.appendChild(option);
+      cameraSelect.innerHTML = '';
+      videoDevices.forEach((device, index) => {
+        const option = document.createElement('option');
+        option.value = device.deviceId;
+        option.text = device.label || `Cámara ${index + 1}`;
+        cameraSelect.appendChild(option);
+      });
+
+      if (videoDevices.length > 0) {
+        startCamera(videoDevices[0].deviceId);
+      }
+    }
+
+    cameraSelect.addEventListener('change', () => {
+      const deviceId = cameraSelect.value;
+      startCamera(deviceId);
     });
 
-    if (videoDevices.length > 0) {
-      startCamera(videoDevices[0].deviceId);
+    function startGeolocation() {
+      if ('geolocation' in navigator) {
+        navigator.geolocation.watchPosition(pos => {
+          const lat = pos.coords.latitude.toFixed(2);
+          const lon = pos.coords.longitude.toFixed(2);
+          const accuracy = pos.coords.accuracy.toFixed(2);
+
+          locationInfo.textContent = `📍 Latitud: ${lat}\n📍 Longitud: ${lon}\n🎯 Precisión: ${accuracy} m`;
+
+          const zoom = 15;
+          const style = encodeURIComponent(JSON.stringify([
+            { "featureType": "all", "elementType": "geometry", "stylers": [{ "color": "#1c1c1c" }] },
+            { "featureType": "all", "elementType": "labels.text.fill", "stylers": [{ "color": "#ffffff" }] },
+            { "featureType": "all", "elementType": "labels.text.stroke", "stylers": [{ "color": "#000000" }, { "weight": 2 }] },
+            { "featureType": "poi", "elementType": "geometry", "stylers": [{ "color": "#2e2e2e" }] },
+            { "featureType": "road", "elementType": "geometry", "stylers": [{ "color": "#444444" }] },
+            { "featureType": "water", "elementType": "geometry", "stylers": [{ "color": "#005577" }] }
+          ]));
+
+          const url = `https://maps.googleapis.com/maps/api/staticmap?center=${lat},${lon}&zoom=${zoom}&size=200x200&maptype=roadmap&markers=color:green|${lat},${lon}&style=${style}&key=${apiKey}`;
+          minimap.src = url;
+        }, err => {
+          console.error('Error geolocalización:', err);
+          locationInfo.textContent = 'Error al obtener la ubicación.';
+        }, {
+          enableHighAccuracy: true,
+          maximumAge: 0
+        });
+      } else {
+        locationInfo.textContent = 'Geolocalización no soportada.';
+      }
     }
-  }
 
-  cameraSelect.addEventListener('change', () => {
-    const deviceId = cameraSelect.value;
-    startCamera(deviceId);
-  });
-
-  function startGeolocation() {
-    if ('geolocation' in navigator) {
-      navigator.geolocation.watchPosition(pos => {
-        const lat = pos.coords.latitude.toFixed(2);
-        const lon = pos.coords.longitude.toFixed(2);
-        const accuracy = pos.coords.accuracy.toFixed(2);
-
-        locationInfo.textContent = `📍 Latitud: ${lat}\n📍 Longitud: ${lon}\n🎯 Precisión: ${accuracy} m`;
-
-        const zoom = 15;
-        const style = encodeURIComponent(JSON.stringify([
-          { "featureType": "all", "elementType": "geometry", "stylers": [{ "color": "#1c1c1c" }] },
-          { "featureType": "all", "elementType": "labels.text.fill", "stylers": [{ "color": "#ffffff" }] },
-          { "featureType": "all", "elementType": "labels.text.stroke", "stylers": [{ "color": "#000000" }, { "weight": 2 }] },
-          { "featureType": "poi", "elementType": "geometry", "stylers": [{ "color": "#2e2e2e" }] },
-          { "featureType": "road", "elementType": "geometry", "stylers": [{ "color": "#444444" }] },
-          { "featureType": "water", "elementType": "geometry", "stylers": [{ "color": "#005577" }] }
-        ]));
-
-        const url = `https://maps.googleapis.com/maps/api/staticmap?center=${lat},${lon}&zoom=${zoom}&size=200x200&maptype=roadmap&markers=color:green|${lat},${lon}&style=${style}&key=${apiKey}`;
-        minimap.src = url;
-      }, err => {
-        console.error('Error geolocalización:', err);
-        locationInfo.textContent = 'Error al obtener la ubicación.';
-      }, {
-        enableHighAccuracy: true,
-        maximumAge: 0
-      });
-    } else {
-      locationInfo.textContent = 'Geolocalización no soportada.';
-    }
-  }
-
-  // Iniciar todo
-  populateCameraOptions();
-  startGeolocation();
-</script>
+    // Iniciar todo
+    populateCameraOptions();
+    startGeolocation();
+  </script>
 
 </body>
+
 </html>
